# agent-diff

./: .gitignore  LICENSE  README.md  env.example  pyrightconfig.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/platform/api/: auth.py  client_server_flow.md  errors.py  main.py  middleware.py  models.py  platform_graphql.py  resolvers.py  routes.py
backend/src/platform/db/: schema.py
backend/src/platform/db/migrations/: env.py
backend/src/platform/evaluationEngine/: core.py  differ.py  dsl_schema.json  testmanager.py
backend/src/platform/evalutionEngine/: README.md  assertion.py  compiler.py  core.py  differ.py  dsl_converter.py  dsl_schema.json  testmanager.py  types.py
backend/src/platform/isolationEngine/: core.py  environment.py  models.py  session.py  templateManager.py  types.py
backend/src/platform/testManager/: core.py
backend/src/services/linear/: READEME.MD
backend/src/services/linear/Linear2.0/: README_AUTH.md  auth_middleware.py  server.py  (+3 more)
backend/src/services/slack/: README.md
backend/tests/: conftest.py
backend/tests/integration/: LINEAR_OPERATIONS_PRIORITY.md  test_differ.py  test_dsl_integration.py  test_environment_lifecycle.py  test_linear_api.py  test_sdk_client.py  test_slack_api.py
backend/tests/unit/: test_assertion_engine.py  test_dsl_compiler.py
backend/tests/validation/: __init__.py  test_suite_integrity.py
backend/utils/: reissue_dev_key.py  seed_dev.py  seed_linear_template.py  seed_slack_template.py  seed_tests.py
sdk/agent_diff/: __init__.py  client.py  models.py  pyproject.toml
(+62 files in other folders)
