[project]
name = "diff-the-universe"
version = "0.1.0"
description = "Matrix For AI Agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.5",
    "ariadne>=0.26.2",
    "jsonschema>=4.25.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.43",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
]
