[project]
name = "agent-diff"
version = "0.0.1"
description = "Python SDK for Agent Diff - test AI agents and train models against replicas of services"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Agent Diff", email = "hubert@uni.minerva.edu"}
]
dependencies = [
    "requests>=2.32.5",
    "pydantic>=2.12.1",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
